All electorates are now listed below the scrolly

--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
         "d3-scale": "^1.0.6",
         "d3-selection": "^1.1.0",
         "d3-transition": "^1.1.0",
+        "es6-promise": "^4.1.1",
+        "immutable": "^3.8.1",
+        "isomorphic-fetch": "^2.2.1",
+        "object-values": "^1.0.0",
         "odyssey": "git+ssh://git@stash.abc-dev.net.au:7999/news/odyssey.git",
         "power-ranger": "^1.1.0",
         "preact": "^8.2.1",
