--- a/package.json
+++ b/package.json
@@ -4,23 +4,13 @@
     "description": "A Preact-enabled ABC News story",
     "license": "MIT",
     "private": true,
-    "contributors": [
-        "Nathan Hoad <nathan@nathanhoad.net>"
-    ],
-    "aunty": {
-        "deploy": {
-            "contentftp": {
-                "files": "**",
-                "from": "build",
-                "to": "/www/res/sites/news-projects/<name>/<id>"
-            }
-        }
-    },
+    "contributors": ["Nathan Hoad <nathan@nathanhoad.net>"],
+    "aunty": "preact-app",
     "scripts": {
         "start": "aunty serve"
     },
     "devDependencies": {
-        "@abcnews/aunty": "^4.2.1",
+        "@abcnews/aunty": "^5.1.3",
         "prettier": "^1.5.3"
     },
     "dependencies": {
@@ -37,8 +27,8 @@
         "object-values": "^1.0.0",
         "odyssey": "git+ssh://git@stash.abc-dev.net.au:7999/news/odyssey.git",
         "power-ranger": "^1.1.0",
-        "preact": "^8.2.1",
-        "preact-compat": "^3.16.0",
+        "preact": "^8.2.5",
+        "preact-compat": "^3.17.0",
         "smoothscroll": "^0.3.0",
         "topojson": "^3.0.0"
     }
