Fixed other markers rendering

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "A Preact-enabled ABC News story",
     "license": "MIT",
     "private": true,
-    "contributors": ["Nathan Hoad <nathan@nathanhoad.net>"],
+    "contributors": [
+        "Nathan Hoad <nathan@nathanhoad.net>"
+    ],
     "aunty": "preact-app",
     "scripts": {
         "start": "aunty serve"
@@ -14,7 +16,6 @@
         "prettier": "^1.5.3"
     },
     "dependencies": {
-        "array-from": "^2.1.1",
         "csv-loader": "^2.1.1",
         "d3-force": "^1.0.6",
         "d3-geo": "^1.6.4",
