--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
     "license": "MIT",
     "private": true,
     "contributors": [
-        "Nathan Hoad <nathan@nathanhoad.net>"
+        "Nathan Hoad <nathan@nathanhoad.net>",
+        "Joshua Byrd <phocka@gmail.com>"
     ],
     "aunty": "preact-app",
     "scripts": {
         "start": "aunty serve"
     },
     "devDependencies": {
-        "@abcnews/aunty": "^5.1.3",
         "prettier": "^1.5.3"
     },
     "dependencies": {
+        "@abcnews/aunty": "^13.0.3",
+        "@babel/preset-react": "^7.18.6",
         "array-from": "^2.1.1",
         "csv-loader": "^2.1.1",
         "d3-force": "^1.0.6",
@@ -27,11 +29,15 @@
         "immutable": "^3.8.1",
         "isomorphic-fetch": "^2.2.1",
         "object-values": "^1.0.0",
-        "odyssey": "git+ssh://git@stash.abc-dev.net.au:7999/news/odyssey.git",
         "power-ranger": "^1.1.0",
         "preact": "^8.2.5",
         "preact-compat": "^3.17.0",
         "smoothscroll": "^0.3.0",
         "topojson": "^3.0.0"
+    },
+    "comments": {
+        "//": "Probably don't really need Aunty either???",
+        "odyssey": "git+ssh://git@stash.abc-dev.net.au:7999/news/odyssey.git",
+        "@abcnews/aunty": "^5.1.3"
     }
 }
