--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
         "start": "aunty serve"
     },
     "devDependencies": {
+        "babel-preset-preact": "^2.0.0",
         "prettier": "^1.5.3"
     },
     "dependencies": {
         "@abcnews/aunty": "^13.0.3",
-        "@babel/preset-react": "^7.18.6",
+        "@abcnews/mount-utils": "^2.0.0",
         "array-from": "^2.1.1",
         "csv-loader": "^2.1.1",
         "d3-force": "^1.0.6",
